--- a/VK-wall.get/index.html
+++ b/VK-wall.get/index.html
@@ -40,7 +40,7 @@
 		<p>&nbsp;</p>
 
 	</div>
-	<script src="Content/test.js"></script>
+	<script src="Content/VK-wall.js"></script>
 	<div id="sc"><script src="https://api.vk.com/method/wall.get?owner_id=-803&count=16&filter=all&v=5.40&callback=count"></script></div>
 	<script src="http://s02.guap.ru/Scripts/jquery.min.js"></script>
 	<script src="http://s02.guap.ru/Content/bootstrap3/js/bootstrap.min.js"></script>
