--- a/VK-wall.get/demo.html
+++ b/VK-wall.get/demo.html
@@ -4,9 +4,8 @@
 	<meta charset='utf-8' />
 	<title>VK method wall.get</title>
 	<style>
-		div > img {
-			width: 600px;
-		}
+		div > img {  width: 600px;  }
+		.attachments_text, .repost_text { font-size: 10px;}
 	</style>
 </head>
 <body>
